[package]
name = "shared_child"
version = "0.3.5"
authors = ["jacko"]
license = "MIT"
repository = "https://github.com/oconnor663/shared_child.rs"
documentation = "https://docs.rs/shared_child"
readme = "README.md"
description = "a library for using child processes from multiple threads"
keywords = ["command", "process", "child", "subprocess"]
categories = ["os"]
edition = "2018"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.42"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.5", features = ["synchapi", "winbase", "winerror", "winnt"] }
